#33 [COMP] Text-field : correction alignement icones

--- a/src/components/FORM_text-fields/main.scss
+++ b/src/components/FORM_text-fields/main.scss
@@ -85,6 +85,7 @@ body {
         cursor: pointer;
         color: $color-main-5;
         font-size: $font-size-medium1;
+                                            padding-top: 6px; //compense le mauvais alignement vertical de la fonte picto.
 
         &:hover {
             color: $color-main-7;
